[package]
name = "bevy_movie_player"
version = "0.5.0"
edition = "2021"

[dev-dependencies]
bevy = { version = "^0.16" }
bevy_asset_loader = "0.23"

[features]
default = []
lottie = [ "rlottie", "rlottie-sys" ]
ffmpeg = [ "video-rs", "ffmpeg-sys-the-third" ]
gv = [ "gv_video" ]
disable-json-extension-for-lottie = []

[dependencies]
bevy = { version = "^0.16", default-features = false, features = [
    "bevy_asset",
    "bevy_render",
] }
bevy_internal = { version = "^0.16", features = [ "bevy_image" ]}
video-rs = { git = "https://github.com/funatsufumiya/video-rs", rev = "004f18acc", version = "0.10", features = ["ndarray"], optional = true }
# av = { git = "https://github.com/rust-av/rust-av", version = "0.1.0", optional = true }
ffmpeg-sys-the-third = { version = "^3.0.0", optional = true }
# ndarray = { version = "0.16.1", optional = true }
gv_video = { version = "0.1.11", optional = true }
rlottie = { git = "https://github.com/funatsufumiya/rlottie-rs", rev = "40daf8e", version = "0.5.2", optional = true }
rlottie-sys = { git = "https://github.com/funatsufumiya/rlottie-rs", rev = "40daf8e", version = "0.2.9", optional = true }
derivative = "2.2.0"
anyhow = "1.0"

# [profile.dev]
# opt-level = 1

# [profile.dev.package."*"]
# opt-level = 3

[[example]]
name = "play_gv_video"
path = "examples/play_gv_video.rs"
doc-scrape-examples = true
required-features = ["gv"]

[[example]]
name = "play_multiple_gv_video"
path = "examples/play_multiple_gv_video.rs"
doc-scrape-examples = true
required-features = ["gv"]

[[example]]
name = "play_lottie"
path = "examples/play_lottie.rs"
doc-scrape-examples = true
required-features = ["lottie"]

[[example]]
name = "play_lottie_seek"
path = "examples/play_lottie_seek.rs"
doc-scrape-examples = true
required-features = ["lottie"]

[[example]]
name = "play_ffmpeg"
path = "examples/play_ffmpeg.rs"
doc-scrape-examples = true
required-features = ["ffmpeg"]